--- a/hint.cabal
+++ b/hint.cabal
@@ -1,4 +1,4 @@
-name:                hint
+name:                hint-patched 
 version:             0.4.2.2
 description:
         This library defines an @Interpreter@ monad. It allows to load Haskell
